--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,15 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+        "gerencianet/gerencianet-sdk-php": "1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.0.*"
     },
     "autoload": {
         "psr-4": {
-            "code-on-yii\\gerencianet\\": "src"
+            "codeonyii\\gerencianet\\": "src"
         }
     }
 }
