--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
         "psr-4": {
             "codeonyii\\gerencianet\\": "src"
         }
+    },
+    "extra": {
+        "asset-installer-paths": {
+            "bower-asset-library": "vendor/bower"
+        }
     }
 }
